--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,36 @@ header {
   justify-content: space-between;
   align-items: center;
 }
+
+.article-list {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  list-style-type: none;
+  text-align: center;
+  gap: 20px;
+  width: 1400px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.article-card h2 {
+  text-align: center;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  word-break: break-word;
+}
+
+.vote-comment {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+
+.author-timestamp {
+  display: flex;
+  gap: 5px;
+  text-align: center;
+  justify-content: center;
+}
