Added a hover and underline function over articles on HomePage for when users want to click

--- a/src/index.css
+++ b/src/index.css
@@ -42,3 +42,12 @@ header {
   text-align: center;
   justify-content: center;
 }
+
+.article-list:hover h2 {
+  text-decoration: underline;
+}
+
+.article-info {
+  display: grid;
+  justify-content: space-between;
+}
