--- a/src/index.css
+++ b/src/index.css
@@ -51,3 +51,24 @@ header {
   display: grid;
   justify-content: space-between;
 }
+
+#comments {
+  display: flex;
+}
+
+ul {
+  list-style: none;
+}
+
+#comment {
+  display: block;
+  justify-content: space-between;
+  background-color: aliceblue;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  flex-wrap: wrap;
+  list-style-type: none;
+  width: 80%;
+  margin-bottom: 1rem;
+}
