--- a/src/index.css
+++ b/src/index.css
@@ -72,3 +72,18 @@ ul {
   width: 80%;
   margin-bottom: 1rem;
 }
+
+button {
+  margin: 0;
+  background: none;
+  border: none;
+  padding: 0;
+}
+button:active {
+  transform: translateY(1px);
+}
+
+#vote {
+  display: flex;
+  gap: 8px;
+}
