--- a/src/index.css
+++ b/src/index.css
@@ -86,4 +86,16 @@ button:active {
 #vote {
   display: flex;
   gap: 8px;
+  align-items: center;
+}
+
+#comment-submit {
+  background-color: white;
+  border: none;
+  color: black;
+  border: 2px solid black;
+  padding: 0.3%;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
 }
