did some css on the not found page

--- a/src/index.css
+++ b/src/index.css
@@ -184,3 +184,12 @@ button:active {
   height: 90px;
   width: 600px;
 }
+
+.not-found {
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  margin-top: 5;
+
+  width: 50%;
+}
