--- a/src/index.css
+++ b/src/index.css
@@ -156,7 +156,8 @@ button:active {
   width: 100%;
   height: auto;
   object-fit: cover;
-  border-radius: 10px;
+  border-radius: 12px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
 }
 
 #article-img-body p {
@@ -175,6 +176,7 @@ button:active {
   font-size: 85%;
   width: 50%;
   height: 40%;
+  margin-left: 0px;
 }
 
 #article-vote-comment {
@@ -203,6 +205,7 @@ button:active {
   font-size: 1rem;
   border: 1px solid #ccc;
   border-radius: 6px;
+  box-sizing: border-box;
 }
 #comment-box form {
   display: flex;
